force-app/main/default/objects/Opportunity_Product_History__c/Opportunity_Product_History__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product History</label>
    <nameField>
        <displayFormat>OPH-{0000}</displayFormat>
        <label>Opportunity Product History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>