force-app/main/default/objects/Opportunity_Product_History__c/fields/Deal_Probability__c.field-meta.xml
<CustomField>
    <fullName>Deal_Probability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>