force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fee_Rate__c</fullName>
    <label>Expected Fee Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>