force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_NIM__c.field-meta.xml
<CustomField>
    <fullName>Expected_NIM__c</fullName>
    <label>Expected NIM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>