force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>