force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Total__c</fullName>
    <label>Expected Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>