force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_Util_Year_Fee__c.field-meta.xml
<CustomField>
    <fullName>Expected_Util_Year_Fee__c</fullName>
    <label>Expected Util Year Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>