force-app/main/default/objects/Opportunity_Product_History__c/fields/Expected_Utilization_Vol_Fee__c.field-meta.xml
<CustomField>
    <fullName>Expected_Utilization_Vol_Fee__c</fullName>
    <label>Expected Utilization Vol Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>