force-app/main/default/objects/Opportunity_Product_History__c/fields/Fee_September__c.field-meta.xml
<CustomField>
    <fullName>Fee_September__c</fullName>
    <label>Fee September</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>