force-app/main/default/objects/Opportunity_Product_History__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>