force-app/main/default/objects/Opportunity_Product_History__c/fields/Host_Prod_Name_Credit_Facility__c.field-meta.xml
<CustomField>
    <fullName>Host_Prod_Name_Credit_Facility__c</fullName>
    <formula>TEXT(Host_Product_Mapping__r.Host_Prod_Name_Credit_Facility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Prod Name/Credit Facility</label>
    <type>Text</type>
</CustomField>