force-app/main/default/objects/Opportunity_Product_History__c/fields/Host_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Group__c</fullName>
    <formula>TEXT(Host_Product_Mapping__r.Host_Product_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Product Group</label>
    <type>Text</type>
</CustomField>