force-app/main/default/objects/Opportunity_Product_History__c/fields/Host_Product_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Product Mapping</label>
    <referenceTo>Host_Product_Mapping__c</referenceTo>
    <relationshipLabel>Opportunity Product History</relationshipLabel>
    <relationshipName>Opportunity_Product_History</relationshipName>
    <type>Lookup</type>
</CustomField>