force-app/main/default/objects/Opportunity_Product_History__c/fields/NI_June__c.field-meta.xml
<CustomField>
    <fullName>NI_June__c</fullName>
    <label>NI June</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>