force-app/main/default/objects/Opportunity_Product_History__c/fields/NI_October__c.field-meta.xml
<CustomField>
    <fullName>NI_October__c</fullName>
    <label>NI October</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>