force-app/main/default/objects/Opportunity_Product_History__c/fields/Notional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Notional_Amount__c</fullName>
    <label>Notional Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>