force-app/main/default/objects/Opportunity_Product_History__c/fields/OriginalStartMonth__c.field-meta.xml
<CustomField>
    <fullName>OriginalStartMonth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginalStartMonth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>