force-app/main/default/objects/Opportunity_Product_History__c/fields/OriginalStartMonthFee__c.field-meta.xml
<CustomField>
    <fullName>OriginalStartMonthFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginalStartMonthFee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>