force-app/main/default/objects/Opportunity_Product_History__c/fields/OriginalStartYear__c.field-meta.xml
<CustomField>
    <fullName>OriginalStartYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginalStartYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>