force-app/main/default/objects/Opportunity_Product_History__c/fields/OriginalStartYearFee__c.field-meta.xml
<CustomField>
    <fullName>OriginalStartYearFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginalStartYearFee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>