force-app/main/default/objects/Opportunity_Product_History__c/fields/PricebookEntry_Product2_SF_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntry_Product2_SF_Product_Key__c</fullName>
    <formula>Product__r.SF_Product_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricebookEntry Product2 SF Product Key</label>
    <type>Text</type>
</CustomField>