force-app/main/default/objects/Opportunity_Product_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product History</relationshipLabel>
    <relationshipName>Opportunity_Product_History</relationshipName>
    <type>Lookup</type>
</CustomField>