force-app/main/default/objects/Opportunity_Product_History__c/fields/Product_Domain__c.field-meta.xml
<CustomField>
    <fullName>Product_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Domain</label>
    <length>25</length>
    <type>Text</type>
</CustomField>