force-app/main/default/objects/Opportunity_Product_History__c/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <formula>TEXT(Host_Product_Mapping__r.Product_Program__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Product Program</label>
    <type>Text</type>
</CustomField>