force-app/main/default/objects/Opportunity_Product_History__c/fields/Recurring_Type_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type_Fee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recurring Type Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>