force-app/main/default/objects/Opportunity_Product_History__c/fields/RevisedStartMonth__c.field-meta.xml
<CustomField>
    <fullName>RevisedStartMonth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RevisedStartMonth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>