force-app/main/default/objects/Opportunity_Product_History__c/fields/RevisedStartMonthFee__c.field-meta.xml
<CustomField>
    <fullName>RevisedStartMonthFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RevisedStartMonthFee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>