force-app/main/default/objects/Opportunity_Product_History__c/fields/RevisedStartYear__c.field-meta.xml
<CustomField>
    <fullName>RevisedStartYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RevisedStartYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>