force-app/main/default/objects/Opportunity_Product_History__c/fields/RevisedStartYearFee__c.field-meta.xml
<CustomField>
    <fullName>RevisedStartYearFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RevisedStartYearFee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>