force-app/main/default/objects/Opportunity_Product_History__c/fields/This_Year_Expected_NI__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Expected_NI__c</fullName>
    <label>This Year Expected NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>