force-app/main/default/objects/Opportunity_Product_History__c/fields/Total_January__c.field-meta.xml
<CustomField>
    <fullName>Total_January__c</fullName>
    <label>Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>