force-app/main/default/objects/Opportunity_Product_History__c/fields/Total_June__c.field-meta.xml
<CustomField>
    <fullName>Total_June__c</fullName>
    <label>Jun</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>