force-app/main/default/objects/Opportunity_Product_History__c/fields/Total_March__c.field-meta.xml
<CustomField>
    <fullName>Total_March__c</fullName>
    <label>Mar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>