force-app/main/default/objects/Opportunity_Product_History__c/fields/Total_November__c.field-meta.xml
<CustomField>
    <fullName>Total_November__c</fullName>
    <label>Nov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>