force-app/main/default/objects/Opportunity_Product_History__c/fields/Total_Volume_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_Amount__c</fullName>
    <label>Total Volume Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>