force-app/main/default/objects/Opportunity_Product_History__c/fields/Type_Of_Reference__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Of Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>